# FederatedLearning

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: client.py  config.py  dataset.py  evaluate.py  model.py  plots.py  server.py  simulation.py  strategy.py  task.py  train.py
