[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kidney-flower"
version = "0.1.0"
description = "Federated Kidney CT Classification"
requires-python = ">=3.11"

dependencies = [
    "flwr==1.32.1",
    "tensorflow==2.21.0",
    "numpy",
    "pandas",
    "scikit-learn",
]